docs/am/4.9/guides/identity-providers/social-identity-providers/twitter.md
---
description: Authenticate Access Management 4.9 users with Twitter. Follow the steps to register a Twitter application and set up the connection.
---

# Twitter

## Overview

You can authenticate users in AM with Twitter. Before you begin, you need to sign up for a [Twitter Developer account](https://developer.twitter.com/en/apply-for-access).

## Steps

To connect your application to Twitter, you will:

* Register a new application in Twitter
* Create a Twitter identity provider in AM
* Set up the connection in Twitter
* Test the connection

## Register a new application in Twitter

Go to [+Add App](https://developer.twitter.com/) in the Twitter Developer Portal.

1. Give your application a name.
2. Click **Complete**.

{% hint style="info" %}
Twitter will generate an API Key and API Secret Key for your application. Make a note of them for later use.
{% endhint %}

## Create a Twitter identity provider

1. Log in to AM Console.
2. Click **Settings > Providers**.
3. Click the plus icon ![plus icon](../../../.gitbook/assets/plus-icon.png).
4. Select **Twitter** as your identity provider type and click **Next**.

{% hint style="info" %}
Ensure you have the API Key and API Secret generated by Twitter to hand.
{% endhint %}

1. Give your identity provider a name.
2. Enter your Twitter API Key and API Secret Key.
3.  Click **Create**.

    <figure><img src="../../../.gitbook/assets/graviteeio-am-userguide-social-idp-twitter.png" alt="The Twitter identity provider Settings tab, with placeholder client ID and secret and HTTP client timeout and pool settings, beside the redirect URI to configure."><figcaption><p>Create Twitter IdP</p></figcaption></figure>

{% hint style="info" %}
Copy the URL in **1. Configure the Redirect URI** to the right of the page. You need this value to update your Twitter application settings in the next section.
{% endhint %}

{% hint style="info" %}
HTTP client settings apply whether or not HTTP/2 is enabled, but they may affect different request characteristics. In particular, the `HTTP Client max pool size` setting limits the number of concurrent connections, but allows a higher number of concurrent requests with multiplexed HTTP/2 connections. See also [Configure HTTP clients](../../../getting-started/configuration/configure-am-gateway/README.md#configure-http-clients).
{% endhint %}

## Set up the connection

Go to your Twitter application settings and edit the **Authentication Settings**.

1. Enable **3-legged OAuth**.
2. Add a **Callback URLs** with the Redirect URI created in the previous step.
3. Click **Save Changes**.

## Test the connection

You can test your Twitter connection using a web application created in AM.

1.  In AM Console, click **Applications** and select your social identity provider.

    <figure><img src="../../../.gitbook/assets/graviteeio-am-userguide-social-idp-list.png" alt="The Identity Providers tab of an application, listing Azure AD, Mongo DB, Facebook, France Connect, Github, Google, Inline, LDAP, LinkedIn, OpenID, Salesforce, and Twitter providers, each with a toggle."><figcaption><p>Select Twitter IdP</p></figcaption></figure>
2.  Call the Login page (the `/oauth/authorize` endpoint). If the connection is working you will see a **Sign in with** button.

    If the button is not visible, there may be a problem with the identity provider settings. Check the AM Gateway log for more information.

    <figure><img src="../../../.gitbook/assets/graviteeio-am-userguide-social-idp-login.png" alt="The hosted Sign in page with Username and Password fields above social sign-in buttons for OpenID Connect, Facebook, Azure AD, and Github."><figcaption><p>Sign in Options</p></figcaption></figure>
